--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -27,6 +27,21 @@
 
 - name: /etc/hosts
   when: system_hosts | length > 0
+  vars:
+    local_hostnames: |
+      {{
+        ( [system_hostname] + system_hostnames ) |
+        product(['', '.' + system_domain]) |
+        map('join')
+      }}
+    local_ips:
+      - ip: "127.0.0.1"
+        names: ['localhost']
+      - ip: "127.0.1.1"
+        names: "{{ local_hostnames }}"
+      - ip: "::1"
+        names: "{{ ['localhost', 'ip6-localhost', 'ip6-loopback'] + local_hostnames }}"
+    etc_hosts: "{{ local_ips + system_hosts }}"
   block:
     - name: Hosts - Display hosts for debugging
       ansible.builtin.debug:
