--- a/tasks/packages/requirements/pacman/keyring.yml
+++ b/tasks/packages/requirements/pacman/keyring.yml
@@ -1,5 +1,5 @@
 ---
-- name: Pacman - Keyring
+- name: Packages - Requirements - Pacman - Keyring
   become: true
   community.general.pacman:
     update_cache: true
