--- a/tasks/packages/requirements/portage/kernel.yml
+++ b/tasks/packages/requirements/portage/kernel.yml
@@ -1,9 +1,8 @@
 ---
-- name: Requirements - Portage - Kernel
+- name: Packages - Requirements - Portage - Kernel
   when: not in_container
   ansible.builtin.include_tasks: "{{ role_path }}/tasks/packages/requirements/portage/kernel/{{ kernel_task }}.yml"
   loop:
-    - config
     - "{{ system_portage_kernel }}"
     - symlink
   loop_control:
