--- a/vars/redhat9-like.yml
+++ b/vars/redhat9-like.yml
@@ -1,5 +1,8 @@
 ---
-default_time_backend: chrony  # https://bugzilla.redhat.com/show_bug.cgi?id=1970865
+# https://bugzilla.redhat.com/show_bug.cgi?id=1970865
+default_time_backend_name: chrony
 
-time_backends:
-  - chrony
+masks:
+  time_backends:
+    - systemd-timesyncd
+    - ntp
