--- a/tasks/packages/cleanup/apt.yml
+++ b/tasks/packages/cleanup/apt.yml
@@ -1,5 +1,5 @@
 ---
-- name: Packages - Cleanup - APT auto clean and auto remove
+- name: Packages - Cleanup - APT
   become: true
   ansible.builtin.apt:
     autoclean: true
