--- a/tasks/packages/requirements/portage/use-flags.yml
+++ b/tasks/packages/requirements/portage/use-flags.yml
@@ -1,24 +1,24 @@
 ---
-- name: Requirements - Portage - Get installed Python versions
+- name: Packages - Requirements - Portage - Use flags - Get installed Python versions
   ansible.builtin.command:
     cmd: equery -q list -F '$slot' dev-lang/python
   changed_when: false
   register: equery
 
-- name: Requirements - Portage - app-portage/cpuid2cpuflags package
+- name: Packages - Requirements - Portage - Use flags - app-portage/cpuid2cpuflags package
   become: true
   community.general.portage:
     package:
       - app-portage/cpuid2cpuflags
     state: present
 
-- name: Requirements - Portage - CPU Flags
+- name: Packages - Requirements - Portage - Use flags - CPU Flags
   ansible.builtin.command:
     cmd: cpuid2cpuflags
   register: cpuid2cpuflags
   changed_when: false
 
-- name: Requirements - Portage - Global use flags
+- name: Packages - Requirements - Portage - Use flags - Global use flags
   become: true
   vars:
     cpu_flags_key: "{{ cpuid2cpuflags.stdout | split(': ') | first }}"
